# AlexBar

./: .gitignore  LICENSE  README.md  findings.md  index.html  package.json  progress.md  task_plan.md
src/: App.tsx  SettingsApp.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  providers.rs  refresh.rs  state.rs  tray.rs  tray_icon.rs  updates.rs  window.rs
src-tauri/src/credentials/: claude_file.rs  codex_file.rs  deepseek_secret.rs  kimi_secret.rs  minimax_secret.rs  mod.rs  zai_secret.rs
src-tauri/src/usage/: claude.rs  codex.rs  deepseek.rs  kimi.rs  minimax.rs  mod.rs  zai.rs
src/components/: Header.tsx  ProviderCard.tsx  ProviderMetricView.tsx  UsageBar.tsx
src/lib/: api.ts  format.ts  i18n.ts  types.ts
src/styles/: global.css
