[package]
name = "alexbar"
version = "0.1.1"
description = "Cross-platform subscription usage menubar"
authors = ["AlexBar"]
edition = "2021"
license = "MIT"
build = "build.rs"

[lib]
name = "alexbar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2.3.0"
tauri-plugin-autostart = "2.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["brotli", "deflate", "gzip", "json", "rustls-tls"] }
base64 = "0.22"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6.0"
thiserror = "2.0"
url = "2.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }
